--- a/README.pod
+++ b/README.pod
@@ -8,11 +8,21 @@ Alien::ZMQ::latest - Alien package for the ZeroMQ library
 
 =head1 VERSION
 
-version 0.004
+version 0.004_01
 
 =head1 DESCRIPTION
 
 Installs the latest release of ZeroMQ.
+
+You can use environment variable to specify ZeroMQ version to be installed.
+Following example can build latest ZeroMQ of version 3.x.
+(Windows and Strawberry perl is intented here)
+
+    > set ALIEN_ZMQ_wVERSION=3.*
+    > perl Makefile.PL
+    > gmake
+    > gmake install
+    
 
 =head1 SEE ALSO
 
@@ -21,6 +31,8 @@ L<ZeroMQ|http://zeromq.org/>
 =head1 AUTHOR
 
 Zakariyya Mughal <zmughal@cpan.org>
+
+(Capability to set version is added by T.Fujiwara)
 
 =head1 COPYRIGHT AND LICENSE
 
